--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -16,3 +16,7 @@ springdoc.swagger-ui.urls[1].name=Customer Service
 springdoc.swagger-ui.urls[1].url=/aggregate/customers/v3/api-docs
 springdoc.swagger-ui.urls[2].name=Reservation Service
 springdoc.swagger-ui.urls[2].url=/aggregate/reservations/v3/api-docs
+
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/realms/hotel-reservation
+logging.level.org.springframework.security=DEBUG
